crawler-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synergychat-crawler
  namespace: crawler
spec:
  selector:
    app: synergychat-crawler
  ports:
    - name: synergychat-crawler
      protocol: TCP
      port: 80
      targetPort: 8080
